--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
             <li class="layui-nav-item" id="Agents"><a href="#" th:href="@{/product/show}">理财产品</a></li>
             <li class="layui-nav-item" id="News"><a href="#">理财资讯</a></li>
             <li class="layui-nav-item" id="Abount"><a href="#">关于我们</a></li>
-
+            <li class="layui-nav-item" id="ques"><a th:href="@{/user/riskQuestion}" href="/user/riskQuestion">问卷调查</a></li>
 
         </ul>
 
