--- a/src/main/resources/templates/user/question.html
+++ b/src/main/resources/templates/user/question.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"></meta>
     <title>理财风险评估</title>
     <link rel="stylesheet" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
     <script src="../../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
@@ -31,10 +31,10 @@
         </fieldset>-->
         <div class="qs-title">1.您理财投资的年限</div>
         <div class="layui-input-block">
-            <input type="radio" name="1" value="5" title="A 10年以上"><br/>
-            <input type="radio" name="1" value="4" title="B 5-10年"><br/>
-            <input type="radio" name="1" value="3" title="C 2-5年"><br/>
-            <input type="radio" name="1" value="2" title="D 2年以下">
+            <input type="radio" name="1" value="5" title="A 10年以上"/><br/>
+            <input type="radio" name="1" value="4" title="B 5-10年"/><br/>
+            <input type="radio" name="1" value="3" title="C 2-5年"/><br/>
+            <input type="radio" name="1" value="2" title="D 2年以下"/>
         </div>
     </div>
 
@@ -44,9 +44,9 @@
         </fieldset>-->
         <div class="qs-title">2.您家庭的就业状况是</div>
         <div class="layui-input-block" >
-            <input type="radio" name="2" value="5" title="A 您与配偶（如有）均有稳定收入的工作"><br/>
-            <input type="radio" name="2" value="3" title="B 您与配偶（如有）其中一人有稳定收入的工作"><br/>
-            <input type="radio" name="2" value="1" title="C 您与配偶（如有）均没有稳定收入的工作或者已退休"><br/>
+            <input type="radio" name="2" value="5" title="A 您与配偶（如有）均有稳定收入的工作"/><br/>
+            <input type="radio" name="2" value="3" title="B 您与配偶（如有）其中一人有稳定收入的工作"/><br/>
+            <input type="radio" name="2" value="1" title="C 您与配偶（如有）均没有稳定收入的工作或者已退休"/><br/>
         </div>
     </div>
 
@@ -57,9 +57,9 @@
         </fieldset>-->
         <div class="qs-title">3.您曾或现阶段持有过的金融品种或以此为主要投资对象的理财产品有</div>
     <div class="layui-input-block">
-        <input type="radio" name="3" value="1" title="A 银行存款/国债、货币市场基金等"><br/>
-        <input type="radio" name="3" value="3" title="B 债券基金、投资连接型保险等"><br/>
-        <input type="radio" name="3" value="5" title="C 股票、股票型基金、期货、权证等"><br/>
+        <input type="radio" name="3" value="1" title="A 银行存款/国债、货币市场基金等"/><br/>
+        <input type="radio" name="3" value="3" title="B 债券基金、投资连接型保险等"/><br/>
+        <input type="radio" name="3" value="5" title="C 股票、股票型基金、期货、权证等"/><br/>
     </div>
     </div>
 
@@ -70,11 +70,11 @@
         </fieldset>-->
         <div class="qs-title"> 4.一般情况下，在您的家庭年收入中，可用作投资</div>
         <div class="layui-input-block">
-            <input type="radio" name="4" value="5" title="A 50%以上 "><br/>
-            <input type="radio" name="4" value="4" title="B 20%-50%"><br/>
-            <input type="radio" name="4" value="3" title="C 25%—35%"><br/>
-            <input type="radio" name="4" value="2" title="D 10%-25%"><br/>
-            <input type="radio" name="4" value="1" title="E 10%以下">
+            <input type="radio" name="4" value="5" title="A 50%以上"/><br/>
+            <input type="radio" name="4" value="4" title="B 20%-50%"/><br/>
+            <input type="radio" name="4" value="3" title="C 25%—35%"/><br/>
+            <input type="radio" name="4" value="2" title="D 10%-25%"/><br/>
+            <input type="radio" name="4" value="1" title="E 10%以下"/>
         </div>
     </div>
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 10px;">
@@ -86,9 +86,9 @@
         </fieldset>-->
         <div class="qs-title"> 5.假设您有100万元人民币建立投资组合，您会选择</div>
         <div class="layui-input-block">
-            <input type="radio" name="5" value="5" title="A 低风险（如银行存款、国债、货币市场基金）占10%，中等风险（如债券基金、投资连接险等）占40%， 高风险（股票、期货及外汇交易等）占50%"><br/>
-            <input type="radio" name="5" value="3" title="B 低风险占30%，中等风险占40%，高风险占30%"><br/>
-            <input type="radio" name="5" value="1" title="C 低风险占60%，中等风险占30%，高风险占10%"><br/>
+            <input type="radio" name="5" value="5" title="A 低风险（如银行存款、国债、货币市场基金）占10%，中等风险（如债券基金、投资连接险等）占40%， 高风险（股票、期货及外汇交易等）占50%"/><br/>
+            <input type="radio" name="5" value="3" title="B 低风险占30%，中等风险占40%，高风险占30%"/><br/>
+            <input type="radio" name="5" value="1" title="C 低风险占60%，中等风险占30%，高风险占10%"/><br/>
         </div>
     </div>
 
@@ -98,11 +98,11 @@
         </fieldset>-->
         <div class="qs-title"> 6.假设您目前有100万元，有一个投资产品，有80%的可能盈利200％，同样也有80%的可能血本无归。您会投资多少</div>
         <div class="layui-input-block">
-            <input type="radio" name="6" value="5" title="A 100万"><br/>
-            <input type="radio" name="6" value="4" title="B 50-80万"><br/>
-            <input type="radio" name="6" value="3" title="C 30-50万"><br/>
-            <input type="radio" name="6" value="2" title="D 10-30万"><br/>
-            <input type="radio" name="6" value="1" title="E 0-10万">
+            <input type="radio" name="6" value="5" title="A 100万"/><br/>
+            <input type="radio" name="6" value="4" title="B 50-80万"/><br/>
+            <input type="radio" name="6" value="3" title="C 30-50万"/><br/>
+            <input type="radio" name="6" value="2" title="D 10-30万"/><br/>
+            <input type="radio" name="6" value="1" title="E 0-10万"/>
         </div>
     </div>
 
@@ -112,9 +112,9 @@
         </fieldset>-->
         <div class="qs-title">7.您的投资理财目标是</div>
         <div class="layui-input-block">
-            <input type="radio" name="7" value="5" title="A 资产迅速成长"><br/>
-            <input type="radio" name="7" value="3" title="B 资产稳健成长"><br/>
-            <input type="radio" name="7" value="1" title="C 避免财产损失"><br/>
+            <input type="radio" name="7" value="5" title="A 资产迅速成长"/><br/>
+            <input type="radio" name="7" value="3" title="B 资产稳健成长"/><br/>
+            <input type="radio" name="7" value="1" title="C 避免财产损失"/><br/>
         </div>
     </div>
 
@@ -127,9 +127,9 @@
         </fieldset>-->
         <div class="qs-title"> 8.根据您以往投资的经验，当有30%的可用资金被分配到高风险的股票或是其他不确定收益的项目中时，您通常</div>
         <div class="layui-input-block">
-            <input type="radio" name="8" value="5" title="A 不太在意、较少关注"><br/>
-            <input type="radio" name="8" value="3" title="B 比较在意、经常关注"><br/>
-            <input type="radio" name="8" value="1" title="C 非常在意、频繁关注"><br/>
+            <input type="radio" name="8" value="5" title="A 不太在意、较少关注"/><br/>
+            <input type="radio" name="8" value="3" title="B 比较在意、经常关注"/><br/>
+            <input type="radio" name="8" value="1" title="C 非常在意、频繁关注"/><br/>
         </div>
     </div>
 
@@ -139,11 +139,11 @@
         </fieldset>-->
         <div class="qs-title">9.假设您有一笔庞大的金额投资在有价证券中，并且在短期内该投资呈现三级跳的跌幅———比如说：一个月下跌了20％，您是否感到压力，压力多大</div>
         <div class="layui-input-block">
-            <input type="radio" name="9" value="5" title="A 没有任何压力，且增加投资金额"><br/>
-            <input type="radio" name="9" value="4" title="B 没有任何压力，继续持有该证券"><br/>
-            <input type="radio" name="9" value="3" title="C 感到轻微压力，卖掉少半可缓解"><br/>
-            <input type="radio" name="9" value="2" title="D 感觉压力较大，需卖掉大半来缓解"><br/>
-            <input type="radio" name="9" value="1" title="E 感觉压力非常大，需全部卖掉才能缓解压力">
+            <input type="radio" name="9" value="5" title="A 没有任何压力，且增加投资金额"/><br/>
+            <input type="radio" name="9" value="4" title="B 没有任何压力，继续持有该证券"/><br/>
+            <input type="radio" name="9" value="3" title="C 感到轻微压力，卖掉少半可缓解"/><br/>
+            <input type="radio" name="9" value="2" title="D 感觉压力较大，需卖掉大半来缓解"/><br/>
+            <input type="radio" name="9" value="1" title="E 感觉压力非常大，需全部卖掉才能缓解压力"/>
         </div>
     </div>
 
@@ -165,29 +165,46 @@
 
         //监听提交
         form.on('submit(demo1)', function(data){
-            var valuearr = getRadioValue()
-            console.log(valuearr)
+            var valuearr = getRadioValue();
+            console.log(valuearr);
+            $.ajax({
+                url:/*[[@{/user/doRiskTest}]]*/'',
+                type:"POST",
+                data:{
+                    value:valuearr
+                },
+                traditional: true,
+                success:function(result)
+                {
+                    if(result.code == 0){
+                        alert(result+"123");
+                    }
 
-            layer.alert(JSON.stringify(data.field), {
+                },
+                error: function(){
+                    alert('error');
+                }
+            });
+            /*layer.alert(JSON.stringify(data.field), {
                 title: '最终的提交信息'
-            })
+            })*/
             return false;
         });
     });
 
     function getRadioValue(){
-        var arr = new Array(9)
-        arr[0] = $("input[name='1']:checked").val()
-        arr[1] = $("input[name='2']:checked").val()
-        arr[2] = $("input[name='3']:checked").val()
+        var arr = new Array(9);
+        arr[0] = $("input[name='1']:checked").val();
+        arr[1] = $("input[name='2']:checked").val();
+        arr[2] = $("input[name='3']:checked").val();
 
-        arr[3] = $("input[name='4']:checked").val()
-        arr[4] = $("input[name='5']:checked").val()
-        arr[5] = $("input[name='6']:checked").val()
+        arr[3] = $("input[name='4']:checked").val();
+        arr[4] = $("input[name='5']:checked").val();
+        arr[5] = $("input[name='6']:checked").val();
 
-        arr[6] = $("input[name='7']:checked").val()
-        arr[7] = $("input[name='8']:checked").val()
-        arr[8] = $("input[name='9']:checked").val()
+        arr[6] = $("input[name='7']:checked").val();
+        arr[7] = $("input[name='8']:checked").val();
+        arr[8] = $("input[name='9']:checked").val();
         return arr
     }
 </script>
