问卷调查完成

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,6 +53,7 @@
 
     <div class="slider">
         <div class="layui-carousel" id="test10">
+            <!--轮播图-->
             <div carousel-item="">
                 <div>
                     <img src="http://www.xudoodoo.com/Public/Home/images/home/banner2.png"/>
@@ -350,12 +351,12 @@
 
 
     <div class="develop-step">
-        <div class="develop-step-title">开发流程</div>
+        <div class="develop-step-title">购买理财产品流程</div>
         <div class="develop-step-content clearfix">
-            <div class="develop-first-step">注册微信小程序并申请微信支付</div>
-            <div class="develop-second-step">制作小程序</div>
-            <div class="develop-third-step">上传并提交审核</div>
-            <div class="develop-firth-step">审核通过，小程序上线</div>
+            <div class="develop-first-step">风险评估</div>
+            <div class="develop-second-step">选择理财产品</div>
+            <div class="develop-third-step">阅读产品说明书</div>
+            <div class="develop-firth-step">完成理财投资</div>
         </div>
     </div>
 
@@ -367,8 +368,6 @@
     layui.use(['carousel', 'form'], function () {
         var carousel = layui.carousel
             , form = layui.form;
-
-
         //图片轮播
         carousel.render({
             elem: '#test10'
@@ -382,7 +381,6 @@
     //登录
     $(function() {
         $('#login').on('click', function () {
-
              layer.open({
                 type: 2,
                 title: '用户登录',
@@ -394,10 +392,7 @@
             });
         });
     });
-
-
 </script>
-
 
 <div class="footer" style="text-align: left">
     <div class="footer-top">
@@ -410,33 +405,33 @@
             </div>
             <div class="footer-block w-25">
                 <div class="footer-tit">服务产品</div>
-                <div class="footer-tit-title"><a href="#">软云商城</a></div>
-                <div class="footer-tit-title"><a href="#">小程序查询</a></div>
-                <div class="footer-tit-title"><a href="#">软云餐饮</a></div>
-                <div class="footer-tit-title"><a href="#">小程序商店</a></div>
-                <div class="footer-tit-title"><a href="#">软云官网</a></div>
+                <div class="footer-tit-title"><a href="#">个人存款</a></div>
+                <div class="footer-tit-title"><a href="#">信用卡</a></div>
+                <div class="footer-tit-title"><a href="#">电子银行</a></div>
+                <div class="footer-tit-title"><a href="#">积分兑换</a></div>
+                <div class="footer-tit-title"><a href="#">个人贷款</a></div>
 
             </div>
 
             <div class="footer-block w-22">
                 <div class="footer-tit">联系我们</div>
-                <p style="margin-bottom: 10px;">湖南省长沙高新开发区尖山路39号长沙中电软件园总部大楼6楼</p>
+                <p style="margin-bottom: 10px;">xxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
                 <p class="mb-10">
                     <a href="http://crm2.qq.com/page/portalpage/wpa.php?uin=885115820&amp;aty=0&amp;a=0&amp;curl=&amp;ty=1"
-                       target="_blank">企业QQ：885115820
+                       target="_blank">企业QQ：1790329815
                         <span class="foot-qq"></span>
                     </a>
                 </p>
-                <p class="mb-10">企业邮箱：zhouyuan@softseeks.cm</p>
+                <p class="mb-10">企业邮箱：13588034686@163.com</p>
 
             </div>
             <div class="footer-block w-12">
-                <div class="footer-tit">关注公众号</div>
+                <!--<div class="footer-tit">关注公众号</div>
                 <div class="footer-ewm">
                     <img src="http://soft.softseeks.cn/zhouyuan/20171221/201712211734075216.jpg" alt="长沙软诚网络科技有限公司"
                          class="loading"/>
-                </div>
-                <!-- <p class="ml">动态和资讯都在这里</p> -->
+                </div>-->
+
             </div>
             <div class="clear"></div>
         </div>
@@ -444,18 +439,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <div style="height: 25px; line-height: 35px; font-size: 12px; text-align: left; width: 1200px; margin: 0 auto; overflow: visible; color: #fff; padding-top: 10px;">
-            合作伙伴:
-            <a href="http://www.91ud.com/" target="_blank" style="margin-left: 10px; color: #fff;">小程序商店</a>
-            <a href="#" target="_blank" style="margin-left: 10px; color: #fff;">微信公众平台</a>
-            <a href="http://www.liantu.com" target="_blank" style="margin-left: 10px; color: #fff;">二维码</a>
-            <a href="http://www.xiaochengxuwang.cn/" target="_blank" style="margin-left: 10px; color: #fff;">小程序</a>
-            <a href="https://www.atobo.com.cn" target="_blank" style="margin-left: 10px; color: #fff;">阿土伯</a>
-            <a href="https://www.xcx.la/" target="_blank" style="margin-left: 10px; color: #fff;">微信小程序</a>
-            <a href="http://www.v5bjq.com/" target="_blank" style="margin-left: 10px; color: #fff;">微信编辑器</a>
-            <a href="http://www.qixiangwang.cn/" target="_blank" style="margin-left: 10px; color: #fff;">天气预报</a>
-        </div>
-        Copyright 2017 长沙软诚网络科技有限公司 版权所有 <a href="http://www.miitbeian.gov.cn" target="_blank">湘ICP备13039900号-1</a>
+
     </div>
 </div>
 
