--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,22 +74,13 @@
                         <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 管理员列表</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 角色管理</a></dd>
-                    </dl>
-                    <dl class="layui-nav-child">
-                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 权限管理</a></dd>
-                    </dl>
-                    <dl class="layui-nav-child">
-                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 权限分类</a></dd>
-                    </dl>
-                    <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" class="layui-col-md-offset2"> 日志管理</a></dd>
-                    </dl>
-                    <dl class="layui-nav-child">
                         <dd><a th:href="@{/notice/list}" href="test/notice/list.html" class="layui-col-md-offset2" target="target"> 公告管理</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/index/testEchart}" href="test/echartsDemo/demo-3.html" class="layui-col-md-offset2" target="target"> 测试Echart</a></dd>
+                    </dl>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/risk/show1}"  href="../risk/show.html" class="layui-col-md-offset2" target="target">风险管理</a></dd>
                     </dl>
                 </li>
             </ul>
