--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,11 +9,9 @@
     <link href="../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}" rel="stylesheet"/>
     <link href="../static/css/index/global.css" th:href="@{/css/index/global.css}" rel="stylesheet"/>
     <script src="../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
- <!--   <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>-->
     <script src="../static/js/vue.js" th:src="@{/js/vue.js}"></script>
 </head>
 <body>
-<!--<div class="headerpage"></div>-->
 <div class="header layui-bg-cyan">
     <input type="hidden" id="controller" value="Index"/>
     <div class="layui-header">
@@ -47,10 +45,7 @@
 
 </div>
 
-
 <div id="Body">
-
-
     <div class="slider">
         <div class="layui-carousel" id="test10">
             <!--轮播图-->
@@ -101,7 +96,6 @@
             </dt>
 
             <dd>
-                <!--<a href="/home/list"   style="margin-left: 1110px;font-size: 15px"><label></label></a>-->
                 <ul class="f1">
                     <li>
                         <div class="g-tac">
@@ -150,79 +144,6 @@
             <p class="f-tac f-db font16 grey666">科学理财、轻松赢利、快捷办理、收益稳定</p>
             <div class="t-con-new f-cb">
                 <ul>
-                    <li>
-                        <a href="#" target="_blank" class="t-con-new-item bg-1">
-                            <div class="t-con-new-item-bg"><i class="t-con-new-item-icon01"></i></div>
-                            <h3>新零售</h3>
-                            <p>
-                                商城、营销、会员<br/>
-                                门店全方位管理<br/>
-                                助力新零售转型升级
-                            </p>
-                            <i class="t-con-new-item-btn">了解更多</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="t-con-new-item bg-2">
-                            <div class="t-con-new-item-bg"><i class="t-con-new-item-icon02"></i></div>
-                            <h3>新餐饮</h3>
-                            <p>
-                                订座 堂吃点餐 外卖<br/>
-                                餐饮行业前厅后厨外卖<br/>
-                                一体化解决方案
-                            </p>
-                            <i class="t-con-new-item-btn">了解更多</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="t-con-new-item bg-3">
-                            <div class="t-con-new-item-bg"><i class="t-con-new-item-icon03"></i></div>
-                            <h3>新零售</h3>
-                            <p>
-                                商城、营销、会员<br/>
-                                门店全方位管理<br/>
-                                助力新零售转型升级
-                            </p>
-                            <i class="t-con-new-item-btn">了解更多</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="t-con-new-item bg-4">
-                            <div class="t-con-new-item-bg"><i class="t-con-new-item-icon04"></i></div>
-                            <h3>新零售</h3>
-                            <p>
-                                商城、营销、会员<br/>
-                                门店全方位管理<br/>
-                                助力新零售转型升级
-                            </p>
-                            <i class="t-con-new-item-btn">了解更多</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="t-con-new-item bg-5">
-                            <div class="t-con-new-item-bg"><i class="t-con-new-item-icon05"></i></div>
-                            <h3>新零售</h3>
-                            <p>
-                                商城、营销、会员<br/>
-                                门店全方位管理<br/>
-                                助力新零售转型升级
-                            </p>
-                            <i class="t-con-new-item-btn">了解更多</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" target="_blank" class="t-con-new-item bg-6">
-                            <div class="t-con-new-item-bg"><i class="t-con-new-item-icon06"></i></div>
-                            <h3>新零售</h3>
-                            <p>
-                                商城、营销、会员<br/>
-                                门店全方位管理<br/>
-                                助力新零售转型升级
-                            </p>
-                            <i class="t-con-new-item-btn">了解更多</i>
-                        </a>
-                    </li>
-
                     <li>
                         <a href="#" target="_blank" class="t-con-new-item bg-7">
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon07"></i></div>
@@ -304,31 +225,31 @@
 
 
     <div style="padding-bottom: 65px;">
-        <p class="g-title">一站式金融生活平台</p>
+        <p class="g-title">便捷服务</p>
         <div class="app-scene">
             <span>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/find-app.svg" alt=""
                      style="width: 28px; height: 34px"/>
-                <p>分享到群</p>
+                <p>手机银行</p>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/accessory-app.svg" alt=""
                      style="width: 38px; height: 34px"/>
-                <p>附近小程序</p>
+                <p>服务价目</p>
             </span>
             <span>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/scan-code.svg" alt=""
                      style="width: 32px; height: 39px"/>
-                <p>线下扫码</p>
+                <p>信用卡产品</p>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/share-wx.svg" alt=""
                      style="width: 29px; height: 34px"/>
-                <p>支付完成页</p>
+                <p>借记卡产品</p>
             </span>
             <span>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/top-search.svg" alt=""
                      style="width: 32px; height: 37px"/>
-                <p>微信搜索</p>
+                <p>出国金融</p>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/mini-apps.svg" alt=""
                      style="width: 33px; height: 34px"/>
-                <p>小程序列表</p>
+                <p>定期存款</p>
             </span>
             <span>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/code-drainage.svg" alt=""
@@ -336,15 +257,15 @@
                 <p>聊天顶部</p>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/WCOA.svg" alt=""
                      style="width: 41px; height: 42px"/>
-                <p>公众号主页</p>
+                <p>分期付款</p>
             </span>
             <span>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/recommend-friend.svg" alt=""
                      style="width: 44px; height: 44px"/>
-                <p>推荐给好友</p>
+                <p>网银助手</p>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/article.svg" alt=""
                      style="width: 38px; height: 34px"/>
-                <p>公众号文章</p>
+                <p>安全专区</p>
             </span>
         </div>
     </div>
@@ -363,7 +284,7 @@
 
 </div>
 
-<script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+<script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 <script th:inline="javascript" >
     layui.use(['carousel', 'form'], function () {
         var carousel = layui.carousel
