--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -123,7 +123,7 @@
         <fieldset class="layui-elem-field" style="padding: 5px;">
             <!--WeAdmin公告-->
             <div class="layui-card">
-                <div class="layui-card-header layui-elem-quote">WeAdmin公告</div>
+                <div class="layui-card-header layui-elem-quote">公告</div>
                 <div class="layui-card-body">
                     <div class="layui-carousel weadmin-notice" lay-filter="notice" lay-indicator="inside" lay-arrow="none" style="width: 100%; height: 280px;">
                         <div carousel-item="">
