--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -122,7 +122,7 @@
         <!--统计信息展示-->
         <fieldset class="layui-elem-field" style="padding: 5px;">
             <!--WeAdmin公告-->
-            <div class="layui-card">
+            <!--<div class="layui-card">
                 <div class="layui-card-header layui-elem-quote">公告</div>
                 <div class="layui-card-body">
                     <div class="layui-carousel weadmin-notice" lay-filter="notice" lay-indicator="inside" lay-arrow="none" style="width: 100%; height: 280px;">
@@ -148,7 +148,7 @@
                     </div>
 
                 </div>
-            </div>
+            </div>-->
             <!--<legend>信息统计</legend>-->
             <blockquote class="layui-elem-quote font16">信息统计</blockquote>
             <div class="">
