--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
         <div class="layadmin-user-login-main">
             <div class="layadmin-user-login-box layadmin-user-login-header">
                 <h2>银行理财后台管理系统</h2>
-                <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>
+               <!-- <p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈</p>-->
             </div>
             <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
                 <form class="layui-form" id="login" th:action="@{/user/dologin}" th:object="${login}" th:method="post">
