--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="layui-inline">
-            <a class="layui-btn layui-btn-normal addNews_btn" id="export-user">导出</a>
+            <a class="layui-btn layui-btn-warm" id="export-user">导出客户信息</a>
         </div>
 
     </form>
