--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
         <div class="layui-logo"><a href="#" id="back-logo">银行理财管理系统后台</a></div>
 
         <ul class="layui-nav layui-layout-right">
-            <li class="layui-nav-item"><a id="index" href="#">前台首页</a></li>
+            <li class="layui-nav-item"><a id="index" th:href="@{/index/home}" href="#">前台首页</a></li>
             <li class="layui-nav-item" th:unless="${session.user == null}" >
                 <a href="#" th:text="${session.user.name}">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img"></img>
@@ -47,7 +47,7 @@
                         <dd><a th:href="@{/user/list}" href="user/list.html" class="layui-col-md-offset2" target="target">客户列表</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/user/review}" href="user/review.html" class="layui-col-md-offset2" target="target">审核客户信息</a></dd>
+                        <dd><a th:href="@{/user/review}" href="user/review.html" class="layui-col-md-offset2" target="target">客户信息审核</a></dd>
                     </dl>
 
                 </li>
@@ -74,13 +74,13 @@
                         <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 管理员列表</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/notice/list}" href="test/notice/list.html" class="layui-col-md-offset2" target="target"> 公告管理</a></dd>
+                        <dd><a th:href="@{/notice/list}" href="test/notice/list.html" class="layui-col-md-offset2" target="target"> 公告信息管理</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/index/testEchart}" href="test/echartsDemo/demo-3.html" class="layui-col-md-offset2" target="target"> 测试Echart</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/risk/show1}"  href="../risk/show.html" class="layui-col-md-offset2" target="target">风险评估管理</a></dd>
+                        <dd><a th:href="@{/risk/show1}"  href="../risk/show.html" class="layui-col-md-offset2" target="target">风险评估参数管理</a></dd>
                     </dl>
                 </li>
             </ul>
