--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -7,98 +7,70 @@
     <link rel="stylesheet" th:href="@{/layui/css/layui.css}" href="../../static/layui/css/layui.css" media="all" />
 </head>
 <body class="childrenBody">
-<form class="layui-form">d
+<form class="layui-form">
     <div class="user_left">
         <div class="layui-form-item">
             <label class="layui-form-label">用户名</label>
             <div class="layui-input-block">
-                <input type="text" value="请叫我马哥" disabled="true" class="layui-input layui-disabled" />
+                <input type="text" th:value="${session.user.name}" disabled="true"  class="layui-input layui-disabled" />
             </div>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">用户组</label>
-            <div class="layui-input-block">
-                <input type="text" value="超级管理员" disabled="true" class="layui-input layui-disabled"/>
-            </div>
-        </div>
+
         <div class="layui-form-item">
             <label class="layui-form-label">真实姓名</label>
             <div class="layui-input-block">
-                <input type="text" value="" placeholder="请输入真实姓名" lay-verify="required" class="layui-input realName"/>
+                <input type="text" th:value="${session.user.name}" disabled="true"  lay-verify="required" class="layui-input realName"/>
             </div>
         </div>
-        <div class="layui-form-item" pane="">
-            <label class="layui-form-label">性别</label>
-            <div class="layui-input-block userSex">
-                <input type="radio" name="sex" value="男" title="男" checked=""/>
-                <input type="radio" name="sex" value="女" title="女"/>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label">用户角色</label>
+            <div class="layui-input-block">
+                <input type="text" value="理财经理" disabled="true" class="layui-input layui-disabled"/>
             </div>
         </div>
+
         <div class="layui-form-item">
             <label class="layui-form-label">手机号码</label>
             <div class="layui-input-block">
-                <input type="tel" value="" placeholder="请输入手机号码" lay-verify="required|phone" class="layui-input userPhone"/>
+                <input type="tel" th:value="${session.user.phone}"  lay-verify="required|phone" class="layui-input userPhone"/>
             </div>
         </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">出生年月</label>
-            <div class="layui-input-block">
-                <input type="text" value="" placeholder="请输入出生年月" lay-verify="required|date" onclick="layui.laydate({elem: this,max: laydate.now()})" class="layui-input userBirthday"/>
-            </div>
-        </div>
-        <div class="layui-form-item userAddress">
-            <label class="layui-form-label">家庭住址</label>
-            <div class="layui-input-inline">
-                <select name="province" lay-filter="province">
-                    <option value="">请选择省</option>
-                </select>
-            </div>
-            <div class="layui-input-inline">
-                <select name="city" lay-filter="city" disabled="true">
-                    <option value="">请选择市</option>
-                </select>
-            </div>
-            <div class="layui-input-inline">
-                <select name="area" lay-filter="area" disabled="true">
-                    <option value="">请选择县/区</option>
-                </select>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <label class="layui-form-label">兴趣爱好</label>
-            <div class="layui-input-block userHobby">
-                <input type="checkbox" name="like[javascript]" title="Javascript"/>
-                <input type="checkbox" name="like[html]" title="HTML(5)"/>
-                <input type="checkbox" name="like[css]" title="CSS(3)"/>
-                <input type="checkbox" name="like[php]" title="PHP"/>
-                <input type="checkbox" name="like[.net]" title=".net"/>
-                <input type="checkbox" name="like[ASP]" title="ASP"/>
-                <input type="checkbox" name="like[C#]" title="C#"/>
-            </div>
-        </div>
+
         <div class="layui-form-item">
             <label class="layui-form-label">邮箱</label>
             <div class="layui-input-block">
-                <input type="text" value="" placeholder="请输入邮箱" lay-verify="required|email" class="layui-input userEmail"/>
+                <input type="tel" th:value="${session.user.email}"    class="layui-input userPhone"/>
             </div>
         </div>
+
         <div class="layui-form-item">
-            <label class="layui-form-label">自我评价</label>
+            <label class="layui-form-label">家庭住址</label>
             <div class="layui-input-block">
-                <textarea placeholder="请输入内容" class="layui-textarea myself"></textarea>
+                <input type="tel" th:value="${session.user.address}"   class="layui-input userPhone"/>
             </div>
         </div>
+
     </div>
 
     <div class="layui-form-item" style="margin-left: 5%;">
         <div class="layui-input-block">
-            <button class="layui-btn" lay-submit="" lay-filter="changeUser">立即提交</button>
+            <button class="layui-btn" lay-submit="" lay-filter="saveUser" id="save">保存</button>
             <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
     </div>
 </form>
 <script type="text/javascript" th:src="@{/layui/layui.js}" src="../../static/layui/layui.js"></script>
-<script type="text/javascript" src="address.js"></script>
-<script type="text/javascript" src="user.js"></script>
+<script th:inline="javascript">
+    layui.use(['table','layer'], function() {
+        var table = layui.table,
+            layer = layui.layer,
+            $ = layui.jquery;
+
+        $('#save').on('click',function () {
+            parent.location.href = "/index/admin";
+        })
+    });
+</script>
 </body>
 </html>
