--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,14 +59,6 @@
                 <div>
                     <img th:src="@{/images/8.jpg}" src="images/8.jpg"/>
                 </div>
-
-                <!--<div>
-                    <img src="../static/img/1-4.jpg"/>
-                </div>
-                <div>
-                    <img src="../static/img/1-5.jpg"/>
-                </div>-->
-
             </div>
         </div>
     </div>
@@ -91,9 +83,7 @@
     <div class="wrap s-bg-gy">
         <dl class="g-box m-dl">
             <dt class="m-dt-t1">让您的资产稳定增长</dt>
-            <dt class="m-dt-t2 g-mb64">放心理财，优质服务，低风险投入，收益百分百
-
-            </dt>
+            <dt class="m-dt-t2 g-mb64">放心理财，优质服务，低风险投入，收益百分百</dt>
 
             <dd>
                 <ul class="f1">
